afp-emdumitrache-main/examples/errors/phase3c_error_dangle.afp
// Phase 3C error: dangling borrow.
// r is reassigned to borrow x inside the inner block.
// When the block ends, x goes out of scope but r still holds a borrow of it.
// Dropping a borrowed value would leave a dangling reference.
// Expected error: "dropped while still borrowed"
let y = Red;
let mut r = &y;
{
    let x = Red;
    r = &x
};
*r
